Our Focused Page
Header linking also done again

--- a/our-focused.html
+++ b/our-focused.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -117,25 +118,34 @@
                                                                 Customization</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="sharepoint.html">SharePoint</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="sharepoint.html">SharePoint</a>
                                                     <ul class="sub-menu">
-                                                        <li><a href="sharepoint-consultancy.html">SharePoint Consultancy</a>
+                                                        <li><a href="sharepoint-consultancy.html">SharePoint
+                                                                Consultancy</a>
                                                         </li>
-                                                        <li><a href="sharepoint-customization.html">SharePoint Customization</a></li>
+                                                        <li><a href="sharepoint-customization.html">SharePoint
+                                                                Customization</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="ms-dynamics-365-business-central.html">MS Dynamics 365 Business Central</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="ms-dynamics-365-business-central.html">MS Dynamics 365
+                                                        Business Central</a>
                                                     <ul class="sub-menu">
-                                                        <li><a href="dynamics-365-business-central-consultancy.html">Dynamics 365 Business Central Consultancy</a>
+                                                        <li><a href="dynamics-365-business-central-consultancy.html">Dynamics
+                                                                365 Business Central Consultancy</a>
                                                         </li>
-                                                        <li><a href="dynamics-365-business-central-customization.html">Dynamics 365 Business Central Customization</a></li>
+                                                        <li><a href="dynamics-365-business-central-customization.html">Dynamics
+                                                                365 Business Central Customization</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="microsoft-azure.html">Microsoft Azure</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="microsoft-azure.html">Microsoft Azure</a>
                                                     <ul class="sub-menu">
                                                         <li><a href="azure-consultancy.html">Azure Consultancy</a>
                                                         </li>
-                                                        <li><a href="azure-customization.html">Azure Customization</a></li>
+                                                        <li><a href="azure-customization.html">Azure Customization</a>
+                                                        </li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="#">Others</a></li>
@@ -242,11 +252,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="breadcrumb-content">
-                            <h3 class="title">Contact Us</h3>
+                            <h3 class="title">Our Focused</h3>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Our Focused</li>
                                 </ol>
                             </nav>
                         </div>
@@ -256,134 +266,45 @@
         </section>
         <!-- breadcrumb-area-end -->
 
-        <!-- contact-area -->
-        <section class="contact-area pt-120 pb-120">
+        <!-- Our Focused Area -->
+        <section class="our-focuesd-sec pt-120 pb-120">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
-                        <div class="contact-thumb">
-                            <img src="assets/img/images/contact_img.jpg" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="contact-info-wrap">
-                            <h2 class="title">Corporate Office</h2>
-                            <p>VST Growth Business</p>
-                            <ul class="list-wrap">
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-phone-volume"></i>
-                                    </div>
-                                    <div class="content">
-                                        <span><a href="tel:+91-8707781155">+91-8707781155</a></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fal fa-paper-plane"></i>
-                                    </div>
-                                    <div class="content">
-                                        <span><a
-                                                href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-map-marker-alt"></i>
-                                    </div>
-                                    <div class="content">
-                                        <span>SN 82B BLOCK RD Rasoolpur, Nawada Sector-62  <br> Noida Uttar Pradesh 201301</span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-5">
-                        <div class="contact-info-wrap">
-                            <h2 class="title">Register Office</h2>
-                            <p>VST Growth Business</p>
-                            <ul class="list-wrap">
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-phone-volume"></i>
-                                    </div>
-                                    <div class="content">
-                                        <span><a href="tel:+91-8707781155">+91-8707781155</a></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fal fa-paper-plane"></i>
-                                    </div>
-                                    <div class="content">
-                                        <span><a
-                                                href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-map-marker-alt"></i>
-                                    </div>
-                                    <div class="content">
-                                        <span>Pargana Barasawa, Jaysinghpur,   <br> Sultanpur, Uttar Pradesh 228141 </span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    
-                    <div class="col-lg-7 col-md-7 col-12">
-                        <div id="contact-map">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7157.366525949512!2d82.26845736272045!3d26.23947925783612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399080ec0d1819dd%3A0x1d29ffa27d01c7f2!2sBarausa%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1697823254907!5m2!1sen!2sin"
-                                width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-lg-12 col-md-12 col-12">
-                        <div class="contact-form-wrap">
-                            <h2 class="title">Keep in touch</h2>
-                            <!-- <p>There are many variations of passages of Lorem Ipsum available but the majority a have suffered alteration</p> -->
-                            <form action="#">
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-grp">
-                                            <input type="text" placeholder="Name*">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-grp">
-                                            <input type="email" placeholder="Email*">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-grp">
-                                            <input type="text" placeholder="Mobile*">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-grp">
-                                            <input type="text" placeholder="Subject*">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 col-md-12 col-12">
-                                        <div class="form-grp">
-                                            <textarea name="message" placeholder="Message*"></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                                <button type="submit" class="btn">Send Message</button>
-                            </form>
+                        <div class="our-focused-para-dv">
+                            <p>As a software company, our primary focus is on delivering innovative and high-quality
+                                software solutions that cater to the specific needs and objectives of our clients.
+
+                            </p>
+                            <p>
+                                Our mission is to empower businesses and organizations with technology solutions that
+                                drive efficiency, productivity, and growth. We are committed to staying at the forefront
+                                of industry trends and continuously improving our services to meet the evolving needs of
+                                our clients.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-12">
+                        <div class="our-focused-para-list-dv">
+                            <p><strong>Our core areas of focus include:</strong></p>
+                            <ul>
+                                <li>Custom Software Development: We specialize in developing custom software applications tailored to our clients' unique requirements, whether it's for improving operations, customer engagement, or data management.</li>
+                                <li>User Experience and Design: We prioritize creating user-friendly interfaces and compelling user experiences to ensure our software is not only functional but also intuitive and visually appealing.</li>
+                                <li>Data Analytics and Business Intelligence: We harness the power of data to provide insightful analytics, helping our clients make data-driven decisions and gain a competitive edge.</li>
+                                <li>Integration Services: We excel in integrating various software systems and ensuring they work cohesively to streamline business processes and optimize data flow.</li>
+                                <li>Cloud Solutions: Our expertise extends to developing, deploying, and managing cloud-based solutions, providing scalability and accessibility for our clients.</li>
+                                <li>Mobile and Web Applications: We design and develop mobile and web applications that are responsive, secure, and capable of meeting the demands of today's digital landscape.</li>
+                                <li>Consulting and Support: We offer consultancy services to guide clients in selecting the right technology stack, strategy, and best practices. Ongoing support and maintenance are integral parts of our commitment to client success.</li>
+                                <li>Security and Compliance: We prioritize security in all our solutions and ensure our clients' data is protected, with a strong emphasis on adhering to regulatory compliance.</li>
+                                <li>Innovation and Emerging Technologies: We keep a pulse on emerging technologies, such as AI, IoT, and blockchain, and incorporate them into our solutions where relevant.</li>
+                                <li>User Training and Knowledge Transfer: We ensure our clients and end-users are proficient in using the software, with training and knowledge transfer programs as part of our services.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- contact-area-end -->
+        <!-- Our Focused Area end -->
 
         <!-- newsletter-area -->
         <section class="newsletter-area-four">
